src/objects/PM_Mix_Instruction__c.object
<CustomObject>
    <fields>
        <fullName>Blend_RXN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blend/RXN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mixing_Details__c</fullName>
        <label>Mixing Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_of_Addition__c</fullName>
        <label>Order of Addition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Mix_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RXN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RXN</label>
        <type>Checkbox</type>
    </fields>
    <label>PM Mix Instruction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000000000}</displayFormat>
        <label>Mix Instruction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Mix Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>